--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v11
+        with:
+          java-version: openjdk@1.17
 
       - name: format check
         run: sbt scalafmtCheck
