--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,5 +22,5 @@ jobs:
           LANGUAGE: "scala"
           MAKE_COMMAND: "sbt doc"
           PAGES_BRANCH: "gh-pages"
-          BUILD_FROM: "master"
+          BUILD_FROM: "develop"
           DOCS_FOLDER: "./target/scala-3.1.3/api"
