--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,12 +15,13 @@ jobs:
       - uses: olafurpg/setup-scala@v11
         with:
           java-version: openjdk@1.17
+      
+      - name: Generate documentation
+        run: sbt doc
 
-      - uses: avinal/github-pages-deploy-action@v0.9
+      - name: Publish documentation to GitHub Pages
+        uses: tsunematsu21/actions-publish-gh-pages@v1.0.2
         with:
-          GITHUB_TOKEN: ${{ github.token }}
-          LANGUAGE: "scala"
-          MAKE_COMMAND: "sbt doc"
-          PAGES_BRANCH: "gh-pages"
-          BUILD_FROM: "develop"
-          DOCS_FOLDER: "./target/scala-3.1.3/api"
+          dir: ./target/scala-3.1.3/api
+          branch: gh-pages
+          token: ${{ secrets.ACCESS_TOKEN }}
