--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v11
+        with:
+          java-version: openjdk@1.17
 
       - name: Compile
         run: sbt compile
